second extra section of home page

--- a/src/components/Home/CustomerCenter/CustomerCenter.css
+++ b/src/components/Home/CustomerCenter/CustomerCenter.css
@@ -8,7 +8,12 @@
     }
 
     .review-field {
-        margin-left: 48px;
+        margin-left: 15px;
         margin-top: 17px;
+    }
+
+    .review-text {
+        margin-top: -35px;
+        margin-left: -33px;
     }
 }
